SonarCloud fix